[package]
name = "rustlet"
version = "0.1.0"
edition = "2024"
authors = ["Seth Linares <sethlinares1@gmail.com>", "James Khadan <jameskhadan@gmail.com>"]
description = ""
license = ""
repository = "https://github.com/jkhadan/Rustlet"
homepage = "https://github.com/jkhadan/Rustlet"
readme = "README.md"
keywords = ["", "", "", "", ""]
categories = ["", ""]

[dependencies]