[package]
name = "rustlet"
version = "0.1.0"
edition = "2024"
authors = ["Seth Linares <sethlinares1@gmail.com>", "James Khadan <jameskhadan@gmail.com>"]
description = ""
license = ""
repository = "https://github.com/jkhadan/Rustlet"
homepage = "https://github.com/jkhadan/Rustlet"
readme = "README.md"
keywords = ["", "", "", "", ""]
categories = ["", ""]

[dependencies]
nix = { version = "0.30.1", features = ["process", "mount", "sched", "signal", "user", "term"] }
caps = "0.5.5"
thiserror = "2.0.16"
